fix: hide gray browser background on mobile keyboard open

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,7 @@ body,
   height: 100%;
   min-height: -webkit-fill-available;
   overflow: hidden;
+  background-color: #0a0514;
 }
 
 body {
